<resources>
    <string name="app_name">Michal_Pieniadz_cz_08_00</string>
    <string name="button_dot">,</string>
    <string name="button_6">6</string>
    <string name="button_sum">=</string>
    <string name="button_3">3</string>
    <string name="button_back">back</string>
    <string name="button_bop">(</string>
    <string name="button_8">8</string>
    <string name="button_4">4</string>
    <string name="button_7">7</string>
    <string name="button_sqrt">\u221a</string>
    <string name="button_clear">C</string>
    <string name="button_div">/</string>
    <string name="button_5">5</string>
    <string name="button_percent">%</string>
    <string name="button_9">9</string>
    <string name="button_sub">-</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_add">+</string>
    <string name="button_bcl">)</string>
    <string name="button_mult">x</string>
    <string name="button_pm">+/-</string>
    <string name="button_0">0</string>
    <string name="sth_go_wrong">BŁĄD</string>
</resources>