<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingHorizontal="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:paddingRight="6dp"
        android:text="@string/button_0"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/equation"
        app:layout_constraintEnd_toEndOf="@id/equation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/equation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:paddingRight="6dp"
        android:text="@string/button_0"
        android:singleLine="true"
        android:ellipsize="start"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        tools:ignore="RtlCompat" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-6dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="-6dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_sqrt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_sqrt"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_backspace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_back"
                android:textColor="#FFC107"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_clear"
                android:textColor="#FFC107"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:clickable="false"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-6dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="-6dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_percent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_percent"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_bop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_bop"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_bcl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_bcl"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_div"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_div"
                android:textColor="#008EFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-6dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="-6dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_7"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_8"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_9"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_mult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_mult"
                android:textColor="#008EFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-6dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="-6dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_4"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_5"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_6"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_sub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_sub"
                android:textColor="#008EFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-6dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="-6dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_1"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_2"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_3"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_add"
                android:textColor="#008EFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-6dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="-6dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_pm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_pm"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_0"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_dot"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_sum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:backgroundTint="#393939"
                android:text="@string/button_sum"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>